{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "38d782cb-49db-4798-92ab-a2f41c28f92b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "71f508fc-c12d-447d-8cdb-f72d9e11af98",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "bebad376-841e-4af7-9cb5-43c717bf2d5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "ad133194-e3a1-4278-ba10-d4fc4a72065d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1caec48-5407-4974-9ded-c311cdadd05d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72311947-ee9b-4197-abc7-bc06d4fdc1a2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f310402c-9d43-4128-8c71-3716d1ccc4cc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<AndroidJoystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}